--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -64,6 +64,7 @@
   </br>
 
     <select class="form-control" id="fan" name="Mode">
+      <option value="LOW">Low Speed</option>
       <option value="HIGH">High Speed</option>
       <option value="MED">Med Speed</option>
       <option value="LOW">Low Speed</option>
