--- a/app/static/styles/smores.css
+++ b/app/static/styles/smores.css
@@ -29,6 +29,7 @@
 html {
   padding: 10px;
   align-content: center;
+  font-size: 1.1em;
 }
 
 body {
@@ -60,16 +61,16 @@ h1, h2, h3, h4,  h5,  h6 {
   margin: 0 0 10px 0;
   font-family: 'Gotham-Bold', Impact, sans-serif;
   font-weight: normal;
-  line-height: 0.9em;
+  line-height: 1.5em;
   letter-spacing: 0;
   text-transform: uppercase;
   text-shadow: none;
   word-wrap: break-word; }
 
 h1 {
-  font-size: 2.0em;
+  font-size: 2.75em;
   color: #002644;
-  margin-left: 12%;
+  margin-left: 15%;
   margin-top: 10px;
   text-shadow: 0px 0px 16px rgba(0, 0, 0, 0.12);
   align-content: center;
@@ -77,25 +78,28 @@ h1 {
 
 
 h2 {
-  font-size: 1.75em;
+  font-size: 2.20em;
   color:  #15727E;
-  margin-left: 10%;
 }
 
 h3 {
-  font-size: 1.5em;
+  font-size: 2.1em;
   color: #6194bb;
   text-shadow: 10px 10px 16px rgba(10, 0, 0, 0.2);
 }
 
 h4 {
-  font-size: 1.2em;
+  font-size: 2.0em;
   color: #698751; }
+
+p {
+  font-size: 1.15em;
+}
 
 
 select {
     padding: 5px 10px;
-    font-size: 22px;
+    font-size: 3.1em;
     text-align: center;
     cursor: pointer;
     outline: none;
@@ -110,10 +114,9 @@ select {
 select:hover {background-color: #6194bb}
 
 
-
 button {
       padding: 5px 10px;
-      font-size: 22px;
+      font-size: 3.0em;
       text-align: center;
       cursor: pointer;
       outline: none;
@@ -137,19 +140,33 @@ button:active {
    * Table
  *********************************************/
 
+ input {
+     font-family: arial, sans-serif;
+     font-size: 2.75em;
+     border-collapse: collapse;
+     width: 40%;
+     margin-left: 10%;
+     margin-right: 10%;
+   }
+
 table {
     font-family: arial, sans-serif;
+    font-size: 1.5em;
     border-collapse: collapse;
-    width: 90%;
+    width: 80%;
+    margin-left: 5%;
+    margin-right: 5%;
   }
 
   td, th {
+    font-size: 1.5em;
     border: 1px solid #6194bb;
     text-align: left;
     padding: 2px;
   }
 
   tr:first-child {
+    font-size: 1.0em;
     background-color: #dddddd;
 }
 
@@ -160,7 +177,7 @@ table {
   left:-5.33%;
   text-align: left;
   float: left;
-  width:50%;
+  width:40%;
   z-index:-10;
 }
 
@@ -170,7 +187,7 @@ table {
   float: right;
   text-align: left;
   z-index:-5;
-  width:50%;
+  width:40%;
 
   .twocolumn {
      display: grid;
