--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -2,21 +2,19 @@
 <html>
 <head>
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-<title>MFAM Main</title>
+<title>Fan Main</title>
 <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/smores.css') }}">
 </head>
 <body>
 
-<h1>Smores's </br>
+<h1>Smores's
   House Fan Control</h1>
 <h2></h2>
-<p> This control turns the house fan:</br>
-  on for x minutes and </br>
+<p> This control turns the house fan:
+  on for x minutes and
   sleeps for y minutes.
 </p>
-</br>
-
-
+<h2>Current Fan Status: </h2>
 {% if fan_status == "Error"  %}
     <h3>Fan not connected
     </br>
@@ -27,14 +25,12 @@
     </h3>
 
 {% else %}
-
-  <h2>Current Fan Status: </h2>
   <table>
     {% set keys_to_display = ["Mode", "on_for", "off_for"] %}
     {% for key in  keys_to_display  %}
     <tr>
           <th> {{ key }} </th>
-          <td> {{ fan_status[key][0] }} </td>
+            <th> {{ fan_status[key][0] }} </td>
     </tr>
     {% endfor %}
   </table>
@@ -44,21 +40,19 @@
     <h4> Fan On / Off cycle in Minutes </h4>
     <table>
       {% if fan_status["on_for"] == ""  %}
-      <tr>
-            <th> <input type = "text" name = "on_for"  hint = "Enter number of minutes"/>
-             </th>
-            <td> <input type = "text" name = "off_for" hint = "Enter number of minutes"/>
-           </td>
-      </tr>
+          <tr>
+            <th><input type = "text" name = "on_for"  hint = "Enter number of minutes"/></th>
+            <td><input type = "text" name = "off_for" hint = "Enter number of minutes"/></td>
+
       {% else %}
-      <tr>
-            <th> <input type = "text" name = "on_for" value={{ fan_status["on_for"][0] }} hint = "Enter number of minutes"/>
-             </th>
-            <td> <input type = "text" name = "off_for" value={{ fan_status["off_for"][0] }} hint = "Enter number of minutes"/>
-           </td>
-      </tr>
+          <tr>
+              <th><input type = "text" name = "on_for" value={{ fan_status["on_for"][0] }} hint = "Enter number of minutes"/></th>
+              <td><input type = "text" name = "off_for" value={{ fan_status["off_for"][0] }} hint = "Enter number of minutes"/></td>
+
       {% endif %}
-    </table>
+        </tr>
+      </table>
+
 
   </br>
   </br>
